--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -12,15 +12,17 @@
         <form action="/produtos" method="post">
             <div>
                 <label for="titulo">Titulo</label>
-                <input type="text" id="titulo" name="titulo" placeholder="insira o título do livro">
+                <input type="text" id="titulo" name="titulo" value="<%=produto.titulo%>" placeholder="insira o título do livro">
             </div>
             <div>
                 <label for="preco">Preço</label>
-                <input type="text" id="preco" name="preco" placeholder="insira o preço do livro">
+                <input type="text" id="preco" name="preco" value="<%=produto.preco%>" placeholder="insira o preço do livro">
             </div>
             <div>
                 <label for="descricao">Descrição</label>
-                <textarea cols="20" rows="10" name="descricao" id="descricao" placeholder="descreva o produto"></textarea>
+                <textarea cols="20" rows="10" name="descricao" id="descricao" placeholder="descreva o produto">
+                        <%=produto.descricao%>
+                </textarea>
             </div>
             <input type="submit" value="salvar">
         </form>
